# schematic

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  SchematicConfig.cmake.in  launch.vs.json.in  vcpkg.json
.github/workflows/: build.yml
schemac/: CMakeLists.txt
schemac/source/: main.cpp
schematic/: CMakeLists.txt  schematic.fbs  schematic.natvis  schematic.proto
schematic/include/schematic/: allocator.h  arena.h  common.h  compile.h  compiler.h  logger.h  protobuf.h  resolver.h  schema.h  serialize.h  source.h  string.h  utility.h  visitor.h
schematic/source/: allocator.cpp  arena.h  array.h  ast.h  builtins.cpp  builtins.h  compile.cpp  compiler.cpp  find.h  generator.cpp  generator.h  ir.cpp  ir.h  ir_gen.cpp  ir_gen.h  lexer.cpp  lexer.h  location.h  lower.cpp  lower.h  parser.cpp  parser.h  protobuf.cpp  schema.cpp  schema_gen.cpp  schema_gen.h  serialize.cpp  source.cpp  token.cpp  token.h  utility.cpp  visitor.cpp
test/: CMakeLists.txt  driver.cmake  embed.cmake  embed_tests.h  evaluator.cpp  evaluator.h  lexer_tests.cpp  protobuf_tests.cpp  run_test.cpp  schema_tests.cpp  schematic_test.cpp  schematic_test.h  test.bat  test.cmake  test_compiler.cpp  test_context.h  test_lexer.cpp  test_matchers.h  test_schemas.cpp  test_serializer.cpp  test_strings.h
test/accept/: test01.d  test01.json  test02.d  test02.json
test/cmake/: driver.cmake  test.cmake
test/include/: embed_tests.h  evaluator.h  test_context.h  test_logger.h  test_matchers.h  test_strings.h
test/input/: test01.sat  test02.sat
test/schemas/: alias.sat  annotations.sat  array.sat  builtin.sat  complete-accept.d  complete-accept.json  complete.sat  enum.sat  fields.sat  import01.sat  imported.sat  initializers.sat  message-accept.d  message-accept.json  message.sat  modifiers.sat  order.sat  preamble.sat  struct.sat  test01.sat  versions.sat
test/schemas/fail/: circular_import.sat  circular_import_child.sat  duplicates.sat  invalid_base_types.sat  invalid_messages.sat  missing_import.sat  reserved.sat  version_dupes.sat
test/schemas/include/: imported.sat  inner.sat  preamble_impl.sat
